Add create product endpoints
